Squash accumulation of cells bug. Re-dimensionalise from user input. Leave black cursor trail using mouseover event.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
     border: 2px solid black;
 }
 
-.cell
+.black
+{
+    background-color: black;
+}
+
+/* .cell
 {
     border: 1px solid black;
-}
+} */
